chore: ajuste toString e log